...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIV" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_as_doctor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/continue_as_doctor"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
...
